Fixed image width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,6 @@ section {
 
 #home-content #image-section img {
   width: 100%;
-  min-width: 400px;
   height: auto;
   box-shadow: 7px 4px 8px 0px rgba(0, 0, 0, 0.5);
 }
